--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,102 +1,136 @@
-.container {  display: grid;
+.container {
+  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.6fr 1.1fr 2.3fr 0.3fr;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas:
-    "Header Header"
-    "Hero image Hero image"
-    "Main Main"
-    "Footer Footer";
+  grid-template-areas: "Header Header" "Hero image Hero image" "Main Main" "Footer Footer";
+  background-color: #f2f2f2;
 }
 
-.header {  display: grid;
+.header {
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas:
-    "Logo Nav Nav Nav";
+  grid-template-areas: "Logo Nav Nav Nav";
   grid-area: Header;
-}
-.logo { grid-area: Logo; }
-
-.nav { grid-area: Nav; }
-
-.hero image {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.9fr 2.2fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    ". . Title Title . ."
-    ". Description  Description  Description  Description  ."
-    ". . . . . .";
-  grid-area: Hero image;
-}
-.title { grid-area: Title; }
-
-.description  {  display: grid;
-  grid-template-columns: 1fr 0.8fr 1.2fr;
-  grid-template-rows: 0.5fr 2.3fr 0.2fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    ". . ."
-    ". . Image2"
-    ". . .";
-  grid-area: Description ;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
 }
 
-.image2 { grid-area: Image2; }
-
-.main {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1.4fr 1.5fr 1.6fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "Employee image1 Employee description 1 Employee description 1 Employee description 1"
-    "Employee image2 Employee description2 Employee description2 Employee description2"
-    "Employee image3 Employee description3 Employee description3 Employee description3"
-    ". . Map Map";
-  grid-area: Main;
+.logo {
+  grid-area: Logo;
+  margin-right: 20px;
 }
-.employee image1 { grid-area: Employee image1; }
 
-.employee image2 { grid-area: Employee image2; }
-
-.employee image3 { grid-area: Employee image3; }
-
-.employee description 1 { grid-area: Employee description 1; }
-
-.employee description2 { grid-area: Employee description2; }
-
-.employee description3 { grid-area: Employee description3; }
-
-.map { grid-area: Map; }
-
-.form { grid-area: Form; }
-
-.footer {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "Copyright  Wireframe link Social links";
-  grid-area: Footer;
+.nav {
+  grid-area: Nav;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.social links { grid-area: Social links; }
 
-.wireframe link { grid-area: Wireframe link; }
-
-.copyright  { grid-area: Copyright ; }
-
-
-html, body , .container {
-  height: 100%;
+.nav ul {
+  list-style: none;
   margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav li {
+  margin-right: 20px;
+}
+
+.nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.hero-image {
+  grid-area: Hero image;
+  background-image: url('images/hero.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.title {
+  grid-area: Title;
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.description {
+  grid-area: Description;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.main {
+  grid-area: Main;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  padding: 20px;
+}
+
+.employee-image {
+  grid-column: 1;
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.employee-description {
+  grid-column: 2;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.employee-description h2 {
+  margin-top: 0;
+}
+
+.footer {
+  grid-area: Footer;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+  background-color: #333;
+  color: #fff;
+}
+
+.social-links {
+  grid-column: 1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-links img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.wireframe-link {
+  grid-column: 2;
+  text-align: center;
+}
+
+.copyright {
+  grid-column: 3;
+  text-align: right;
 }
