--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -38,7 +38,7 @@
 .nav ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   display: flex;
 }
 
@@ -51,12 +51,12 @@
   text-decoration: none;
 }
 
-.hero-img {
+.hero-image {
   grid-area: "Hero Image";
   background-image: url('images/hero.jpg');
   background-size: cover;
   background-position: center;
-  height: 500px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,13 +65,13 @@
 
 .title {
   grid-area: Title;
-  font-size: 36px;
+  font-size: 70px;
   margin-bottom: 20px;
 }
 
 .description {
   grid-area: Description;
-  font-size: 18px;
+  font-size: 30px;
   margin-bottom: 20px;
 }
 
@@ -83,7 +83,7 @@
   padding: 20px;
 }
 
-.employee-img {
+.employee-image {
   grid-column: 1;
   width: 100%;
   height: 150px;
@@ -100,7 +100,7 @@
 }
 
 .employee-description h2 {
-  margin-top: 0;
+  margin-top: 10px;
 }
 
 .iframe {
@@ -117,8 +117,55 @@
   color: #fff;
 }
 
+form {
+  background-color: #f7f7f7;
+  padding: 20px; 
+  border: 1px solid;
+  border-radius: 10px; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+}
+
+label {
+  display: block; 
+  margin-bottom: 10px; 
+}
+
+input, textarea {
+  width: 100%; 
+  padding: 10px; 
+  margin-bottom: 20px; 
+  border: 1px solid;
+}
+
+input[type="submit"] {
+  background-color: #333; 
+  color: #fff;
+  padding: 10px 20px; 
+  border: none; 
+  border-radius: 5px;
+  cursor: pointer; 
+}
+
+input[type="submit"]:hover {
+  background-color: #555;
+}
+
+h1 {
+  font-size: 36px; 
+  font-weight: bold; 
+  color: #333; 
+  margin-bottom: 20px; 
+}
+
+h2 {
+  font-size: 24px; 
+  font-weight: bold; 
+  color: #666; 
+  margin-bottom: 10px; 
+}
+
 .social-links {
-  grid-column: 1;
+  grid-column: 3;
   display: flex;
   justify-content: space-between;
 }
@@ -127,6 +174,7 @@
   width: 20px;
   height: 20px;
   margin-right: 10px;
+  display:flex;
 }
 
 .wireframe-link {
@@ -135,6 +183,6 @@
 }
 
 .copyright {
-  grid-column: 3;
+  grid-column: 1;
   text-align: left;
 }
